--- a/Day2/views/index.ejs
+++ b/Day2/views/index.ejs
@@ -27,8 +27,16 @@
             <% if(files.length>0 ){ %>
                 <% files.forEach(function(val){ %>
                     <div class="task min-w-72  py-4 rounded-md bg-zinc-800">
-                        <h1 class="text-white text-3xl traking -tighter "><%= val%></h1>
-                        <a class="text-blue-500 inline-block mt-3" href="">Read more</a>
+                        <h1 class="text-white text-3xl traking -tighter ">
+                            <%= val%>
+                        </h1>
+
+                        <div class="flex bg-red-500 w-full justify-between items-center mt-3">
+                            <a class="text-blue-500 inline-block" href="/file/<%= val%>">Read more</a>
+                            <a class="text-zinc-600" href="/edit/<%=val%>">edit</a>
+
+                        </div>
+
                     </div>
                     <%}) %>
                         <% }else{ %>
