--- a/mongoseCard/views/index.ejs
+++ b/mongoseCard/views/index.ejs
@@ -11,9 +11,19 @@
 
 <body>
     <div class="w-full h-full bg-zinc-900 p-10 text-white">
-        <form action="">
-            <input class="px-5 py-3 border-2 border-zinc-800 rounded bg-transparent " type="text" placeholder="Enter Your Name"
+        <div class="nav mb-10">
+            <a class="text-blue-500" href="/read">View Users</a>
+        </div>
+        <h1 class="text-3xl tracking-tighter mb-3">Create User</h1>
+        <form action="/create" method="POST" class="flex gap-5 flex-wrap">
+
+            <input class="px-5 py-3 border-2 border-zinc-800 outline-none rounded-lg bg-transparent     " type="text"name="name" placeholder="Enter Your Name"
                 class="w-full p-3 rounded-md outline-none focus:ring-2 focus:ring-blue-500 bg-zinc-800 text-white">
+                <input class="px-5 py-3 border-2 border-zinc-800 outline-none rounded-lg bg-transparent     " type="text"name="email" placeholder="Enter Your email"
+                class="w-full p-3 rounded-md outline-none focus:ring-2 focus:ring-blue-500 bg-zinc-800 text-white">
+                <input class="px-5 py-3 border-2 border-zinc-800 outline-none rounded-lg bg-transparent     " type="text"name="image" placeholder="Enter Your image URL"
+                class="w-full p-3 rounded-md outline-none focus:ring-2 focus:ring-blue-500 bg-zinc-800 text-white">
+                <input class="px-5 py-2 bg-blue-500 rounded-lg ml-3" type="submit" value="Create User">
         </form>
 
     </div>
