--- a/mongoseCard/views/read.ejs
+++ b/mongoseCard/views/read.ejs
@@ -14,6 +14,9 @@
         <a class="text-blue-500" href="/">GoTo Home</a>
         <h1 class="text-3xl  tracking-tighter mb-3">ALL USERS</h1>
         <div class="users flex gap-5 flex-wrap">
+            <% if (users.length===0){ %>
+                <h1 class="text-2xl text-red-600">NO USERS FOUND</h1>
+            <% } %>
           <% users.forEach(function(user){ %>
             <div class="user max-w-72 p-4 bg-zinc-800 rounded-lg">
                 <div class="w-full h-52 rounded-lg bg-zinc-800 overflow-hidden">
@@ -22,7 +25,7 @@
                 <h3 class="text-xl mt-3 tracking-tighter"><%= user.name %> </h3>
                 <h5 class="text-zinc-500"><%= user.email %></h5>
                 <div class="flex gap-3 mt-10 ">
-                    <a class="text-zinc-200" href="">edit user</a>
+                    <a class="text-zinc-200" href="/edit/<%= user._id %>">edit user</a>
                     <a class="text-red-600" href="/delete/<%= user._id %>">delete user</a>
                 </div>
             </div>
