--- a/mongoseCard/views/edit.ejs
+++ b/mongoseCard/views/edit.ejs
@@ -12,18 +12,18 @@
 <body>
     <div class="w-full h-full bg-zinc-900 p-10 text-white">
         <div class="nav mb-10">
-            <a class="text-yellow-500" href="/read">View Users</a>
+            <a class="text-yellow-500" href="/edit">View Users</a>
         </div>
         <h1 class="text-3xl tracking-tighter mb-3">Update User</h1>
-        <form action="/create" method="POST" class="flex gap-5 flex-wrap">
+        <form action="/update/<%=user._id%>" method="POST" class="flex gap-5 flex-wrap">
 
-            <input class="px-5 py-3 border-2 border-zinc-800 outline-none rounded-lg bg-transparent     " type="text"name="name" placeholder="Enter Your Name"
+            <input class="px-5 py-3 border-2 border-zinc-800 outline-none rounded-lg bg-transparent     " type="text"name="name" placeholder="Enter Your Name" value="<%=user.name%>"
                 class="w-full p-3 rounded-md outline-none focus:ring-2 focus:ring-blue-500 bg-zinc-800 text-white">
-                <input class="px-5 py-3 border-2 border-zinc-800 outline-none rounded-lg bg-transparent     " type="text"name="email" placeholder="Enter Your email"
+                <input class="px-5 py-3 border-2 border-zinc-800 outline-none rounded-lg bg-transparent     " type="text"name="email" placeholder="Enter Your email" value="<%=user.email%>"
                 class="w-full p-3 rounded-md outline-none focus:ring-2 focus:ring-blue-500 bg-zinc-800 text-white">
-                <input class="px-5 py-3 border-2 border-zinc-800 outline-none rounded-lg bg-transparent     " type="text"name="image" placeholder="Enter Your image URL"
+                <input class="px-5 py-3 border-2 border-zinc-800 outline-none rounded-lg bg-transparent     " type="text"name="image" placeholder="Enter Your image URL" value="<%=user.image%>"
                 class="w-full p-3 rounded-md outline-none focus:ring-2 focus:ring-blue-500 bg-zinc-800 text-white">
-                <input class="px-5 py-2 bg-blue-500 rounded-lg ml-3" type="submit" value="Create User">
+                <input class="px-5 py-2 bg-blue-500 rounded-lg ml-3" type="submit" value="Update User">
         </form>
 
     </div>
